# once

./: .pylintrc  Makefile  README.rst  pyproject.toml
once/: __init__.py
tests/: test_init.py
